Change a crapload of instances of ... to &hellip;. This should hopefully close #1390, assuming I found everything.
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/doc@4791 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/manual/terms.html
+++ b/manual/terms.html
@@ -70,7 +70,7 @@ href="help.html">Getting Help</a>
 </p>
 
 <a name="Plugins"></a><h4>Plugins</h4>
-<p>By design, Habari by itself has a basic set of capabilities. Plugins add functionality, new capabilities, or additional content types to Habari. Habari includes several out of the box...
+<p>By design, Habari by itself has a basic set of capabilities. Plugins add functionality, new capabilities, or additional content types to Habari. Habari includes several out of the box&hellip;
 </p>
 <a name="Timeline_and_Loupe"></a><h4>Timeline and Loupe</h4>
 <img alt="The timeline and loupe" src="timeline.jpg" width="300" height="43" class="thumbimage" />
