Having the link to the release notes correct would be nice.
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/doc@4904 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/manual/upgrading.html
+++ b/manual/upgrading.html
@@ -45,7 +45,7 @@
 </li></ol>
 
 <h3>Upgrading from Version 0.6.x to Version 0.7.x</h3>
-<p>Version 0.7 incorporates many changes from the previous version, both in bug fixes and new features. For details see <a href="http://wiki.habariproject.org/en/Releases/0.7" title="http://wiki.habariproject.org/en/Releases/0.7" rel="nofollow">the release notes</a>.
+<p>Version 0.7 incorporates many changes from the previous version, both in bug fixes and new features. For details see <a href="http://wiki.habariproject.org/en/Release_0.7" title="Release 0.7" rel="nofollow">the release notes</a>.
 </p>
 
 <p>There are four major changes that have the potential to break your installation.</p>
